# psychic-cleaners

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml  publish.yml
docs/superpowers/plans/: 2026-07-14-psychic-cleaners.md  2026-07-15-known-issues-fixes.md  2026-07-15-playtest-bug-fixes.md  2026-07-16-audio-polish.md  2026-07-16-beam-crossing-backfire.md  2026-07-16-day-rent-loan.md  2026-07-18-quit-confirm.md
docs/superpowers/specs/: 2026-07-13-psychic-cleaners-design.md  2026-07-16-audio-polish-design.md  2026-07-16-beam-crossing-backfire-design.md  2026-07-16-day-rent-loan-design.md  2026-07-18-quit-confirm-design.md
scripts/: release.sh
src/psychic_cleaners/: __init__.py  __main__.py
src/psychic_cleaners/core/: bust.py  catalog.py  city.py  clock.py  codec.py  constants.py  convergence.py  drive.py  economy.py  events.py  finale.py  game.py  geometry.py  giant.py  loadout.py  pk.py  rng.py
src/psychic_cleaners/shell/: app.py  audio.py  gfx.py  text.py
src/psychic_cleaners/shell/scenes/: __init__.py  busting.py  city_map.py  driving.py  finale.py  gameover.py  shop.py  title.py
tests/: conftest.py
tests/core/: test_bust.py  test_catalog.py  test_city.py  test_city_tick.py  test_clock.py  test_codec.py  test_command_scene_gating.py  test_constants.py  test_convergence.py  test_drive.py  test_economy.py  test_events.py  test_finale.py  test_game_accounts.py  test_game_finale.py  test_game_fsm.py  test_game_fuzz.py  test_game_mascot.py  test_geometry.py  test_giant.py  test_loadout.py  test_notice_lifetime.py  test_pk.py  test_rng.py  test_sanity.py
tests/integration/: test_bust_flow.py  test_economy_loop.py  test_full_game.py  test_loan.py  test_map_flow.py  test_shop.py  test_travel.py  test_walkthrough.py
tests/playtests/: README.md  drive3.py  playtest.py  playtest2.py  playtest3.py  playtest_beam_crossing.py
tests/shell/: test_app_smoke.py  test_app_transitions.py  test_audio.py  test_busting_scene.py  test_city_map_scene.py  test_city_sprites.py  test_driving_scene.py  test_endgame_scenes.py  test_foundation.py  test_gfx_polish.py  test_mascot_overlay.py  test_quit_confirm.py  test_shop_scene.py  test_text_layout.py  test_theme.py  test_title.py  test_title_scene.py
